# 2026-Epita-Intelligence-Symbolique

./: README.md
E1-Comptabilite-maximin-et-equilibres-de-Nash-par-programmation-lineaire/: README.md  partie1_et_5.ipynb  partie4.ipynb  partie_2.ipynb  partie_3.ipynb  requirements.txt  results.csv  summary.csv
J3-serveur-MCP/: j3_serveur_mcp_analyse_symbolique.ipynb  slides.tex
L2-generation-procedurale-donjons/: README.md  pyproject.toml
L2-generation-procedurale-donjons/src/dungeon/: __init__.py  benchmark.py  cli.py  generator.py  grid.py  metrics.py  playtest.py  report.py  rooms_graph.py  tileset.py
L2-generation-procedurale-donjons/src/dungeon/solvers/: __init__.py  _cpsat_worker.py  base.py  cpsat_generator.py  wfc.py
L2-generation-procedurale-donjons/tests/: test_cpsat_generator.py  test_generator.py  test_grid.py  test_metrics.py  test_playtest.py  test_wfc.py
L2-generation-procedurale-donjons/ui/: app.py
L2-generation-procedurale-donjons/ui/assets/: generate_assets.py
M1-llm-symbolic-verifier/: README.md  pyproject.toml
M1-llm-symbolic-verifier/src/m1_pipeline/: __init__.py  cli.py  evaluate.py  parsing.py  pipeline.py  records.py  strategies.py  verifier.py  web.py
M1-llm-symbolic-verifier/src/m1_pipeline/llm/: __init__.py  base.py  client.py  factory.py  mock.py  presets.py
M1-llm-symbolic-verifier/src/m1_pipeline/problems/: __init__.py  base.py  library.py
M1-llm-symbolic-verifier/tests/: test_pipeline.py  test_verifier.py
S4-Programmation-probabiliste-symbolique-pour-la-detection-de-regimes-de-marche/: README.md  requirements.txt  s4_regimes.ipynb
groupe-J3-serveur-mcp-outils-analyse-symbolique/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
groupe-J3-serveur-mcp-outils-analyse-symbolique/eval/: benchmark.jsonl  run_eval.py
groupe-J3-serveur-mcp-outils-analyse-symbolique/slides/: outline.md
groupe-J3-serveur-mcp-outils-analyse-symbolique/src/symbolic_mcp/: config.py  server.py
groupe-J3-serveur-mcp-outils-analyse-symbolique/src/symbolic_mcp/host/: __init__.py  gemini_host.py
groupe-J3-serveur-mcp-outils-analyse-symbolique/src/symbolic_mcp/tools/: owl_tool.py  sat_tool.py
groupe-J3-serveur-mcp-outils-analyse-symbolique/tests/: test_config.py  test_dependencies.py  test_eval.py  test_mcp_server.py  test_tools.py
groupe-M7-generation-neuro-symbolique/: .env.example  .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt  run_experiment.py
groupe-M7-generation-neuro-symbolique/data/: syllabus.json
groupe-M7-generation-neuro-symbolique/results/: experiment.json
groupe-M7-generation-neuro-symbolique/src/m7_neurosymbolic/: baselines.py  feedback.py  generator.py  loop.py  metrics.py  schema.py  validator.py
groupe-M7-generation-neuro-symbolique/tests/: test_loop.py  test_validator.py
(+87 files in other folders)
