[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-gen"
version = "0.1.0"
description = "L2 — Generation procedurale de niveaux de jeu par contraintes (CP-SAT et Wave Function Collapse)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ortools>=9.7",
    "numpy>=1.23",
    "pandas>=1.5,<3.0",
    "matplotlib>=3.6",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.30", "Pillow>=10.0"]

[project.scripts]
dungeon-gen = "dungeon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
