[project]
name = "symbolic-mcp"
version = "0.1.0"
description = "J3 — Serveur MCP d'outils d'analyse symbolique (SAT/SMT/OWL) orchestrables par un LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "z3-solver>=4.13.0",
    "python-sat>=0.1.8",
    "owlready2>=0.46",
    "rdflib>=7.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = false
