[project]
name = "m7-neurosymbolic"
version = "0.1.0"
description = "Generation de contenu neuro-symbolique : Semantic Kernel + validation CP-SAT"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
